Standard foods, closes #49
