# Yum/src/main/java/org/bootcamp/yum/api/model/EditedFood.java
@@ -1,27 +1,18 @@
-/*
- * Copyright (C) 2017 JR Technologies.
- * This file is part of Yum.
- * 
- * Yum is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
- * 
- * Yum is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
- * See the GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License along with Yum. 
- * If not, see <http://www.gnu.org/licenses/>.
- */
-
 package org.bootcamp.yum.api.model;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
-import io.swagger.annotations.ApiModelProperty;
 import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.bootcamp.yum.api.model.LastEdit;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
 /**
  * EditedFood
  */
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-04-20T16:58:58.888+03:00")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-10-03T11:34:42.640+03:00")
 
 public class EditedFood   {
   @JsonProperty("foodName")
@@ -36,10 +27,12 @@ public class EditedFood   {
   @JsonProperty("price")
   private Double price = null;
 
+  @JsonProperty("standard")
+  private Boolean standard = null;
+
   @JsonProperty("lastEdit")
   private LastEdit lastEdit = null;
 
- 
   public EditedFood foodName(String foodName) {
     this.foodName = foodName;
     return this;
@@ -50,6 +43,8 @@ public class EditedFood   {
    * @return foodName
   **/
   @ApiModelProperty(value = "")
+
+
   public String getFoodName() {
     return foodName;
   }
@@ -68,6 +63,8 @@ public class EditedFood   {
    * @return foodType
   **/
   @ApiModelProperty(value = "")
+
+
   public String getFoodType() {
     return foodType;
   }
@@ -86,6 +83,8 @@ public class EditedFood   {
    * @return description
   **/
   @ApiModelProperty(value = "")
+
+
   public String getDescription() {
     return description;
   }
@@ -104,12 +103,34 @@ public class EditedFood   {
    * @return price
   **/
   @ApiModelProperty(value = "")
+
+
   public Double getPrice() {
     return price;
   }
 
   public void setPrice(Double price) {
     this.price = price;
+  }
+
+  public EditedFood standard(Boolean standard) {
+    this.standard = standard;
+    return this;
+  }
+
+   /**
+   * Get standard
+   * @return standard
+  **/
+  @ApiModelProperty(value = "")
+
+
+  public Boolean getStandard() {
+    return standard;
+  }
+
+  public void setStandard(Boolean standard) {
+    this.standard = standard;
   }
 
   public EditedFood lastEdit(LastEdit lastEdit) {
@@ -122,6 +143,9 @@ public class EditedFood   {
    * @return lastEdit
   **/
   @ApiModelProperty(value = "")
+
+  @Valid
+
   public LastEdit getLastEdit() {
     return lastEdit;
   }
@@ -129,8 +153,7 @@ public class EditedFood   {
   public void setLastEdit(LastEdit lastEdit) {
     this.lastEdit = lastEdit;
   }
-  
- 
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -145,12 +168,13 @@ public class EditedFood   {
         Objects.equals(this.foodType, editedFood.foodType) &&
         Objects.equals(this.description, editedFood.description) &&
         Objects.equals(this.price, editedFood.price) &&
+        Objects.equals(this.standard, editedFood.standard) &&
         Objects.equals(this.lastEdit, editedFood.lastEdit);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(foodName, foodType, description, price, lastEdit);
+    return Objects.hash(foodName, foodType, description, price, standard, lastEdit);
   }
 
   @Override
@@ -162,6 +186,7 @@ public class EditedFood   {
     sb.append("    foodType: ").append(toIndentedString(foodType)).append("\n");
     sb.append("    description: ").append(toIndentedString(description)).append("\n");
     sb.append("    price: ").append(toIndentedString(price)).append("\n");
+    sb.append("    standard: ").append(toIndentedString(standard)).append("\n");
     sb.append("    lastEdit: ").append(toIndentedString(lastEdit)).append("\n");
     sb.append("}");
     return sb.toString();
